--- a/index.html
+++ b/index.html
@@ -42,68 +42,63 @@
         </header>
   </header>
 
-  <!-- Signature Blend Section -->
-  <section class="signature">
-    <div class="signature-pai">
-    <div class="container">
-        <div>
-      <h2>Signature blend.</h2>
-      <p>A variety of options to match every coffee lover's taste.</p>
+<body>
+  
+  <hr>
+
+  <div class="container">
+    <div class="header">
+      <h1>Signature Brand</h1>
+      <p>Discover our iconic product series designed with elegance and precision. Each product is crafted to perfection, delivering superior quality and performance.</p>
     </div>
-    
-    <div class="product-grid">
-        <div class="product">
-          <img src="img/Cafe 1.png" alt="Café  1">
-          <p>Thermoon Blend</p>
-        </div>
-        <div class="product">
-          <img src="img/Cafe 2.png" alt="Café 2">
-          <p>Moonlit Espresso</p>
-        </div>
-        <div class="product">
-          <img src="img/Cafe 3.jpg" alt="Café 3">
-          <p>Evening Roast</p>
-        </div>
+    <div class="products">
+      <div class="product">
+        <img src="img/Cafe 1.png" alt="Product 1">
+        <h2>Café Com Pão de queijo</h2>
+        <p>Café</p>
+      </div>
+      <div class="product">
+        <img src="img/Cafe 2.png" alt="Product 2">
+        <h2>Café Com Leite</h2>
+        <p>Café</p>
+      </div>
+      <div class="product">
+        <img src="img/Cafe 3.jpg" alt="Product 3">
+        <h2>Café Com Panetone</h2>
+        <p>Café</p>
       </div>
     </div>
-</div>
-  </section>
+  </div>
+
+  <hr>
 
   <!-- House Blend Section -->
   <section class="house-blend">
     <div class="container">
       <div class="text-content">
-        <h2>The House Blend.</h2>
-        <p>Experience our special house blend with a bold, rich flavor.</p>
+        <h2>A Magia do Café: Muito Mais que uma Bebida</h2>
+        <p>O café é mais do que uma simples bebida, é uma experiência sensorial que conecta pessoas e culturas. Originado na Etiópia, tornou-se um símbolo global de energia e inspiração. Seja apreciado em uma manhã tranquila ou compartilhado em conversas, cada xícara carrega histórias e tradições. Além de despertar, o café proporciona momentos de reflexão e prazer. Afinal, quem resiste ao aroma de um café fresco?</p>
       </div>
       <div class="image-content">
-        <img src="house-blend.png" alt="House Blend">
+        <img src="img/cafe-7454951_1920.jpg" alt="House Blend">
       </div>
     </div>
   </section>
+
+  <hr>
 
   <!-- Medium Roast Section -->
   <section class="medium-roast">
     <div class="container">
       <div class="image-content">
-        <img src="medium-roast.png" alt="Medium Roast">
+        <img src="img/coffee-5495609_1920.jpg" alt="Medium Roast">
       </div>
       <div class="text-content">
-        <h2>Medium Roast.</h2>
-        <p>Enjoy the perfect balance of flavor intensity and smoothness.</p>
+        <h2> Café: O Combustível das Ideias</h2>
+        <p>Considerado o combustível dos criativos, o café tem o poder de transformar a rotina. Rico em antioxidantes e cafeína, ele estimula a mente, melhora o foco e energiza o corpo. Do clássico espresso ao sofisticado latte, o café se adapta a todos os gostos. Mais do que uma necessidade, ele é um ritual que traz conforto e inspiração, acompanhando grandes ideias e pequenas pausas do dia a dia.</p>
       </div>
     </div>
   </section>
 
-  <!-- Newsletter Section -->
-  <footer class="newsletter">
-    <div class="container">
-      <h2>Newsletter</h2>
-      <form action="#">
-        <input type="email" placeholder="Enter your email" required>
-        <button type="submit">Subscribe</button>
-      </form>
-    </div>
-  </footer>
 </body>
 </html>
