--- a/index.html
+++ b/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee Shop</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-  <!-- Header Section -->
+  <!-- Header -->
   <header class="hero">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Coffee Landing Page</title>
-        <link rel="stylesheet" href="styles.css">
-      </head>
-      <body>
-        <!-- Header -->
-        <header class="hero">
-          
-          <div class="hero-content">
-            <div class="text">
-              <h1>Comece seu dia com o aroma do café perfeito!</h1>
-              <p>Nada como um café especial para energizar suas manhãs. Descubra blends únicos e feitos para quem aprecia cada gole.</p>
-              <a href="#" class="btn">Ver Cardápio</a>
-            </div>
-            <div class="image">
-              <img src="img/Logo.jpg" alt="Coffee Cups">
-            </div>
-          </div>
+    <div class="hero-content">
+      <div class="text">
+        <h1>Comece seu dia com o aroma do café perfeito!</h1>
+        <p>Nada como um café especial para energizar suas manhãs. Descubra blends únicos e feitos para quem aprecia cada gole.</p>
+        <a href="#" class="btn">Ver Cardápio</a>
+      </div>
+      <div class="image">
+        <img src="img/Logo.jpg" alt="Coffee Cups">
+      </div>
+    </div>
 
-
-          <nav class="navbar">
-            <ul class="nav-links">
-                <li><a href="#">Cafés</a></li>
-                <li><a href="#">Chá</a></li>
-                <li><a href="#">Cardápio</a></li>
-                <li><a href="#">Loja</a></li>              
-            </ul>
-          </nav>
-        </header>
+    <nav class="navbar">
+      <ul class="nav-links">
+        <li><a href="#">Cafés</a></li>
+        <li><a href="#">Chá</a></li>
+        <li><a href="#">Cardápio</a></li>
+        <li><a href="#">Loja</a></li>
+      </ul>
+    </nav>
   </header>
 
-<body>
-  
   <hr>
 
   <div class="container">
@@ -73,7 +62,7 @@
   <hr>
 
   <!-- House Blend Section -->
-  <section class="house-blend">
+  <section class="section1">
     <div class="container">
       <div class="text-content">
         <h2>A Magia do Café: Muito Mais que uma Bebida</h2>
@@ -88,17 +77,41 @@
   <hr>
 
   <!-- Medium Roast Section -->
-  <section class="medium-roast">
+  <section class="section2">
     <div class="container">
       <div class="image-content">
         <img src="img/coffee-5495609_1920.jpg" alt="Medium Roast">
       </div>
       <div class="text-content">
-        <h2> Café: O Combustível das Ideias</h2>
+        <h2>Café: O Combustível das Ideias</h2>
         <p>Considerado o combustível dos criativos, o café tem o poder de transformar a rotina. Rico em antioxidantes e cafeína, ele estimula a mente, melhora o foco e energiza o corpo. Do clássico espresso ao sofisticado latte, o café se adapta a todos os gostos. Mais do que uma necessidade, ele é um ritual que traz conforto e inspiração, acompanhando grandes ideias e pequenas pausas do dia a dia.</p>
       </div>
     </div>
   </section>
 
+  <hr>
+
+  <section id="contato" class="section contato">
+    <div class="formulario">
+      <h2>Deixe Seu FeedBack</h2>
+
+      <form action="#" method="post">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Mensagem:</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit" class="btn">Enviar</button>
+      </form>
+    </div>
+  </section>
+
+  <hr>
+
 </body>
+
 </html>
